tests/fixtures/invalid/float_sub_bytes.py
# Cannot subtract Bytes from Float
x: float = 1.0 - b"hello"
